fixed header spacing and started on fixing banner

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -59,12 +59,6 @@
         display: none;
     }
 }
-@media screen and (min-width: 1200px) {
-    .container-body{
-        width: 600px;
-        margin: auto;
-    }
-}
 
 .container-sidebar{
     display: none;
