--- a/scss/modules/_banner.scss
+++ b/scss/modules/_banner.scss
@@ -1,14 +1,17 @@
 @media screen and (max-width: 767px) {
     .banner-div{
         text-align: center;
+        height: 60vh;
         & > h2{
             margin-top: 10%;
+            font-size: 1.5em;
         }
     }
 }
 @media screen and (min-width: 767px) {
     .banner-div{
         text-align: left;
+        height: 60vh;
         & > h2 {
             margin-top: 10%;
             margin-left: 0.9em;
@@ -30,8 +33,8 @@
     
 }
 .banner-div{
-    width: 100%;
-    height: 100vh;
+    width: 100vw;
+    
     margin: 0;
     display: inline-block;
     color: white;
@@ -45,6 +48,7 @@
         margin-left:24px;
         padding: 15px;
         width:250px;
+        border-radius: 3px;
     }
     &-1{
         background: linear-gradient(to right, rgba(0,0,0,0.8),rgba(0,0,0,0.3)), url("../img/home-oaVs.png");
