--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -63,9 +63,8 @@ button {
     &-sidebar{
         background-color: $primary-color;
         border-radius: 4%;
-        margin-top: 5px;
-        margin-bottom: 5px;
-        padding: 15px;
+        font-size: 0.805em;
+        padding: 1em;
         &:hover{
             background-color: darken($primary-color, 10%);
         }
